@@ -17,6 +17,7 @@
 package org.apache.kafka.coordinator.group;
 
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.Uuid;
 import org.apache.kafka.common.compress.Compression;
 import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.errors.NotCoordinatorException;
@@ -47,6 +48,9 @@ import org.apache.kafka.common.message.ShareGroupDescribeResponseData;
 import org.apache.kafka.common.message.ShareGroupDescribeResponseData.DescribedGroup;
 import org.apache.kafka.common.message.ShareGroupHeartbeatRequestData;
 import org.apache.kafka.common.message.ShareGroupHeartbeatResponseData;
+import org.apache.kafka.common.message.StreamsGroupDescribeResponseData;
+import org.apache.kafka.common.message.StreamsGroupHeartbeatRequestData;
+import org.apache.kafka.common.message.StreamsGroupHeartbeatResponseData;
 import org.apache.kafka.common.message.SyncGroupRequestData;
 import org.apache.kafka.common.message.SyncGroupResponseData;
 import org.apache.kafka.common.message.TxnOffsetCommitRequestData;
@@ -60,6 +64,7 @@ import org.apache.kafka.common.requests.DescribeShareGroupOffsetsRequest;
 import org.apache.kafka.common.requests.OffsetCommitRequest;
 import org.apache.kafka.common.requests.RequestContext;
 import org.apache.kafka.common.requests.ShareGroupDescribeRequest;
+import org.apache.kafka.common.requests.StreamsGroupDescribeRequest;
 import org.apache.kafka.common.requests.TransactionResult;
 import org.apache.kafka.common.requests.TxnOffsetCommitRequest;
 import org.apache.kafka.common.utils.BufferSupplier;
@@ -76,13 +81,25 @@ import org.apache.kafka.coordinator.common.runtime.CoordinatorShardBuilderSuppli
 import org.apache.kafka.coordinator.common.runtime.MultiThreadedEventProcessor;
 import org.apache.kafka.coordinator.common.runtime.PartitionWriter;
 import org.apache.kafka.coordinator.group.metrics.GroupCoordinatorMetrics;
+import org.apache.kafka.coordinator.group.streams.StreamsGroupHeartbeatResult;
 import org.apache.kafka.image.MetadataDelta;
 import org.apache.kafka.image.MetadataImage;
+import org.apache.kafka.server.authorizer.Authorizer;
 import org.apache.kafka.server.record.BrokerCompressionType;
+import org.apache.kafka.server.share.persister.DeleteShareGroupStateParameters;
+import org.apache.kafka.server.share.persister.DeleteShareGroupStateResult;
+import org.apache.kafka.server.share.persister.GroupTopicPartitionData;
+import org.apache.kafka.server.share.persister.InitializeShareGroupStateParameters;
+import org.apache.kafka.server.share.persister.InitializeShareGroupStateResult;
+import org.apache.kafka.server.share.persister.PartitionErrorData;
+import org.apache.kafka.server.share.persister.PartitionFactory;
+import org.apache.kafka.server.share.persister.PartitionStateData;
 import org.apache.kafka.server.share.persister.Persister;
 import org.apache.kafka.server.share.persister.ReadShareGroupStateSummaryParameters;
+import org.apache.kafka.server.share.persister.TopicData;
 import org.apache.kafka.server.util.FutureUtils;
 import org.apache.kafka.server.util.timer.Timer;
+import org.apache.kafka.server.util.timer.TimerTask;
 
 import org.slf4j.Logger;
 
@@ -90,11 +107,13 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Properties;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.ExecutionException;
@@ -108,6 +127,7 @@ import static org.apache.kafka.coordinator.common.runtime.CoordinatorOperationEx
 /**
  * The group coordinator service.
  */
+@SuppressWarnings({"ClassDataAbstractionCoupling"})
 public class GroupCoordinatorService implements GroupCoordinator {
 
     public static class Builder {
@@ -121,6 +141,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
         private GroupCoordinatorMetrics groupCoordinatorMetrics;
         private GroupConfigManager groupConfigManager;
         private Persister persister;
+        private Optional<Authorizer> authorizer;
 
         public Builder(
             int nodeId,
@@ -170,6 +191,11 @@ public class GroupCoordinatorService implements GroupCoordinator {
             return this;
         }
 
+        public Builder withAuthorizer(Optional<Authorizer> authorizer) {
+            this.authorizer = authorizer;
+            return this;
+        }
+
         public GroupCoordinatorService build() {
             requireNonNull(config, new IllegalArgumentException("Config must be set."));
             requireNonNull(writer, new IllegalArgumentException("Writer must be set."));
@@ -180,12 +206,14 @@ public class GroupCoordinatorService implements GroupCoordinator {
             requireNonNull(groupCoordinatorMetrics, new IllegalArgumentException("GroupCoordinatorMetrics must be set."));
             requireNonNull(groupConfigManager, new IllegalArgumentException("GroupConfigManager must be set."));
             requireNonNull(persister, new IllegalArgumentException("Persister must be set."));
+            requireNonNull(authorizer, new IllegalArgumentException("Authorizer must be set."));
 
             String logPrefix = String.format("GroupCoordinator id=%d", nodeId);
             LogContext logContext = new LogContext(String.format("[%s] ", logPrefix));
 
             CoordinatorShardBuilderSupplier<GroupCoordinatorShard, CoordinatorRecord> supplier = () ->
-                new GroupCoordinatorShard.Builder(config, groupConfigManager);
+                new GroupCoordinatorShard.Builder(config, groupConfigManager)
+                    .withAuthorizer(authorizer);
 
             CoordinatorEventProcessor processor = new MultiThreadedEventProcessor(
                 logContext,
@@ -220,7 +248,8 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 runtime,
                 groupCoordinatorMetrics,
                 groupConfigManager,
-                persister
+                persister,
+                timer
             );
         }
     }
@@ -272,6 +301,8 @@ public class GroupCoordinatorService implements GroupCoordinator {
      */
     private MetadataImage metadataImage = null;
 
+    private Timer timer;
+
     /**
      *
      * @param logContext                The log context.
@@ -287,7 +318,8 @@ public class GroupCoordinatorService implements GroupCoordinator {
         CoordinatorRuntime<GroupCoordinatorShard, CoordinatorRecord> runtime,
         GroupCoordinatorMetrics groupCoordinatorMetrics,
         GroupConfigManager groupConfigManager,
-        Persister persister
+        Persister persister,
+        Timer timer
     ) {
         this.log = logContext.logger(GroupCoordinatorService.class);
         this.config = config;
@@ -295,6 +327,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
         this.groupCoordinatorMetrics = groupCoordinatorMetrics;
         this.groupConfigManager = groupConfigManager;
         this.persister = persister;
+        this.timer = timer;
     }
 
     /**
@@ -313,14 +346,6 @@ public class GroupCoordinatorService implements GroupCoordinator {
         String groupId
     ) {
         return new TopicPartition(Topic.GROUP_METADATA_TOPIC_NAME, partitionFor(groupId));
-    }
-
-    /**
-     * See {@link GroupCoordinator#isNewGroupCoordinator()}
-     */
-    @Override
-    public boolean isNewGroupCoordinator() {
-        return true;
     }
 
     /**
@@ -365,6 +390,44 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
+     * See
+     * {@link GroupCoordinator#streamsGroupHeartbeat(RequestContext, org.apache.kafka.common.message.StreamsGroupHeartbeatRequestData)}.
+     */
+    @Override
+    public CompletableFuture<StreamsGroupHeartbeatResult> streamsGroupHeartbeat(
+        RequestContext context,
+        StreamsGroupHeartbeatRequestData request
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(
+                new StreamsGroupHeartbeatResult(
+                    new StreamsGroupHeartbeatResponseData().setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code()),
+                    Map.of()
+                )
+            );
+        }
+
+        return runtime.scheduleWriteOperation(
+            "streams-group-heartbeat",
+            topicPartitionFor(request.groupId()),
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.streamsGroupHeartbeat(context, request)
+        ).exceptionally(exception -> handleOperationException(
+            "streams-group-heartbeat",
+            request,
+            exception,
+            (error, message) ->
+                new StreamsGroupHeartbeatResult(
+                    new StreamsGroupHeartbeatResponseData()
+                        .setErrorCode(error.code())
+                        .setErrorMessage(message),
+                    Map.of()
+                ),
+            log
+        ));
+    }
+
+    /**
      * See {@link GroupCoordinator#shareGroupHeartbeat(RequestContext, ShareGroupHeartbeatRequestData)}.
      */
     @Override
@@ -383,7 +446,19 @@ public class GroupCoordinatorService implements GroupCoordinator {
             topicPartitionFor(request.groupId()),
             Duration.ofMillis(config.offsetCommitTimeoutMs()),
             coordinator -> coordinator.shareGroupHeartbeat(context, request)
-        ).exceptionally(exception -> handleOperationException(
+        ).thenCompose(result -> {
+            // This ensures that the previous group write has completed successfully
+            // before we start the persister initialize phase.
+            if (result.getValue().isPresent()) {
+                timer.add(new TimerTask(0L) {
+                    @Override
+                    public void run() {
+                        persisterInitialize(result.getValue().get(), result.getKey());
+                    }
+                });
+            }
+            return CompletableFuture.completedFuture(result.getKey());
+        }).exceptionally(exception -> handleOperationException(
             "share-group-heartbeat",
             request,
             exception,
@@ -392,6 +467,81 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 .setErrorMessage(message),
             log
         ));
+    }
+
+    // Visibility for testing
+    CompletableFuture<ShareGroupHeartbeatResponseData> persisterInitialize(
+        InitializeShareGroupStateParameters request,
+        ShareGroupHeartbeatResponseData defaultResponse
+    ) {
+        return persister.initializeState(request)
+            .thenCompose(
+                response -> handlePersisterInitializeResponse(request.groupTopicPartitionData().groupId(), response, defaultResponse)
+            ).exceptionally(exception -> {
+                GroupTopicPartitionData<PartitionStateData> gtp = request.groupTopicPartitionData();
+                log.error("Unable to initialize share group state {}, {}", gtp.groupId(), gtp.topicsData(), exception);
+                Errors error = Errors.forException(exception);
+                return new ShareGroupHeartbeatResponseData()
+                    .setErrorCode(error.code())
+                    .setErrorMessage(error.message());
+            });
+    }
+
+    private CompletableFuture<ShareGroupHeartbeatResponseData> handlePersisterInitializeResponse(
+        String groupId,
+        InitializeShareGroupStateResult persisterInitializeResult,
+        ShareGroupHeartbeatResponseData defaultResponse
+    ) {
+        Errors persisterError = Errors.NONE;
+        for (TopicData<PartitionErrorData> topicData : persisterInitializeResult.topicsData()) {
+            Optional<PartitionErrorData> errData = topicData.partitions().stream().filter(partition -> partition.errorCode() != Errors.NONE.code()).findAny();
+            if (errData.isPresent()) {
+                persisterError = Errors.forCode(errData.get().errorCode());
+                break;
+            }
+        }
+
+        if (persisterError.code() == Errors.NONE.code()) {
+            Map<Uuid, Set<Integer>> topicPartitionMap = new HashMap<>();
+            for (TopicData<PartitionErrorData> topicData : persisterInitializeResult.topicsData()) {
+                topicPartitionMap.put(
+                    topicData.topicId(),
+                    topicData.partitions().stream().map(PartitionErrorData::partition).collect(Collectors.toSet())
+                );
+            }
+            if (topicPartitionMap.isEmpty()) {
+                return CompletableFuture.completedFuture(defaultResponse);
+            }
+            return performShareGroupStateMetadataInitialize(groupId, topicPartitionMap, defaultResponse);
+        } else {
+            log.error("Received error while calling initialize state for {} on persister {}.", groupId, persisterError.code());
+            return CompletableFuture.completedFuture(
+                new ShareGroupHeartbeatResponseData()
+                    .setErrorCode(persisterError.code())
+                    .setErrorMessage(persisterError.message())
+            );
+        }
+    }
+
+    private CompletableFuture<ShareGroupHeartbeatResponseData> performShareGroupStateMetadataInitialize(
+        String groupId,
+        Map<Uuid, Set<Integer>> topicPartitionMap,
+        ShareGroupHeartbeatResponseData defaultResponse
+    ) {
+        return runtime.scheduleWriteOperation(
+            "initialize-share-group-state",
+            topicPartitionFor(groupId),
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.initializeShareGroupState(groupId, topicPartitionMap)
+        ).thenApply(
+            __ -> defaultResponse
+        ).exceptionally(exception -> {
+            log.error("Unable to initialize share group state partition metadata for {}.", groupId, exception);
+            Errors error = Errors.forException(exception);
+            return new ShareGroupHeartbeatResponseData()
+                .setErrorCode(error.code())
+                .setErrorMessage(error.message());
+        });
     }
 
     /**
@@ -572,7 +722,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                              .setMemberId(member.memberId())
                              .setGroupInstanceId(member.groupInstanceId())
                              .setErrorCode(Errors.UNKNOWN_MEMBER_ID.code()))
-                         .collect(Collectors.toList());
+                         .toList();
                     return new LeaveGroupResponseData()
                         .setMembers(memberResponses);
                 } else {
@@ -610,7 +760,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
             exception -> {
                 exception = Errors.maybeUnwrapException(exception);
                 if (exception instanceof NotCoordinatorException) {
-                    return Collections.emptyList();
+                    return List.of();
                 } else {
                     throw new CompletionException(exception);
                 }
@@ -653,7 +803,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     .computeIfAbsent(topicPartitionFor(groupId), __ -> new ArrayList<>())
                     .add(groupId);
             } else {
-                futures.add(CompletableFuture.completedFuture(Collections.singletonList(
+                futures.add(CompletableFuture.completedFuture(List.of(
                     new ConsumerGroupDescribeResponseData.DescribedGroup()
                         .setGroupId(null)
                         .setErrorCode(Errors.INVALID_GROUP_ID.code())
@@ -682,6 +832,58 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
+     * See {@link GroupCoordinator#streamsGroupDescribe(RequestContext, List)}.
+     */
+    @Override
+    public CompletableFuture<List<StreamsGroupDescribeResponseData.DescribedGroup>> streamsGroupDescribe(
+        RequestContext context,
+        List<String> groupIds
+    ) {
+        if (!isActive.get()) {
+            return CompletableFuture.completedFuture(StreamsGroupDescribeRequest.getErrorDescribedGroupList(
+                groupIds,
+                Errors.COORDINATOR_NOT_AVAILABLE
+            ));
+        }
+
+        final List<CompletableFuture<List<StreamsGroupDescribeResponseData.DescribedGroup>>> futures =
+            new ArrayList<>(groupIds.size());
+        final Map<TopicPartition, List<String>> groupsByTopicPartition = new HashMap<>();
+        groupIds.forEach(groupId -> {
+            if (isGroupIdNotEmpty(groupId)) {
+                groupsByTopicPartition
+                    .computeIfAbsent(topicPartitionFor(groupId), __ -> new ArrayList<>())
+                    .add(groupId);
+            } else {
+                futures.add(CompletableFuture.completedFuture(List.of(
+                    new StreamsGroupDescribeResponseData.DescribedGroup()
+                        .setGroupId(null)
+                        .setErrorCode(Errors.INVALID_GROUP_ID.code())
+                )));
+            }
+        });
+
+        groupsByTopicPartition.forEach((topicPartition, groupList) -> {
+            CompletableFuture<List<StreamsGroupDescribeResponseData.DescribedGroup>> future =
+                runtime.scheduleReadOperation(
+                    "streams-group-describe",
+                    topicPartition,
+                    (coordinator, lastCommittedOffset) -> coordinator.streamsGroupDescribe(groupIds, lastCommittedOffset)
+                ).exceptionally(exception -> handleOperationException(
+                    "streams-group-describe",
+                    groupList,
+                    exception,
+                    (error, __) -> StreamsGroupDescribeRequest.getErrorDescribedGroupList(groupList, error),
+                    log
+                ));
+
+            futures.add(future);
+        });
+
+        return FutureUtils.combineFutures(futures, ArrayList::new, List::addAll);
+    }
+    
+    /**
      * See {@link GroupCoordinator#shareGroupDescribe(RequestContext, List)}.
      */
     @Override
@@ -704,7 +906,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     .computeIfAbsent(topicPartitionFor(groupId), __ -> new ArrayList<>())
                     .add(groupId);
             } else {
-                futures.add(CompletableFuture.completedFuture(Collections.singletonList(
+                futures.add(CompletableFuture.completedFuture(List.of(
                     new ShareGroupDescribeResponseData.DescribedGroup()
                         .setGroupId(null)
                         .setErrorCode(Errors.INVALID_GROUP_ID.code())
@@ -753,7 +955,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
         groupIds.forEach(groupId -> {
             // For backwards compatibility, we support DescribeGroups for the empty group id.
             if (groupId == null) {
-                futures.add(CompletableFuture.completedFuture(Collections.singletonList(
+                futures.add(CompletableFuture.completedFuture(List.of(
                     new DescribeGroupsResponseData.DescribedGroup()
                         .setGroupId(null)
                         .setErrorCode(Errors.INVALID_GROUP_ID.code())
@@ -822,20 +1024,27 @@ public class GroupCoordinatorService implements GroupCoordinator {
         });
 
         groupsByTopicPartition.forEach((topicPartition, groupList) -> {
-            CompletableFuture<DeleteGroupsResponseData.DeletableGroupResultCollection> future =
-                runtime.scheduleWriteOperation(
-                    "delete-groups",
-                    topicPartition,
-                    Duration.ofMillis(config.offsetCommitTimeoutMs()),
-                    coordinator -> coordinator.deleteGroups(context, groupList)
-                ).exceptionally(exception -> handleOperationException(
-                    "delete-groups",
-                    groupList,
-                    exception,
-                    (error, __) -> DeleteGroupsRequest.getErrorResultCollection(groupList, error),
-                    log
-                ));
+            CompletableFuture<DeleteGroupsResponseData.DeletableGroupResultCollection> future = deleteShareGroups(topicPartition, groupList).thenCompose(groupErrMap -> {
+                DeleteGroupsResponseData.DeletableGroupResultCollection collection = new DeleteGroupsResponseData.DeletableGroupResultCollection();
+                List<String> retainedGroupIds = deleteCandidateGroupIds(groupErrMap, groupList, collection);
+                if (retainedGroupIds.isEmpty()) {
+                    return CompletableFuture.completedFuture(collection);
+                }
 
+                return handleDeleteGroups(context, topicPartition, retainedGroupIds)
+                    .whenComplete((resp, __) -> resp.forEach(result -> collection.add(result.duplicate())))
+                    .thenApply(__ -> collection);
+            });
+            // deleteShareGroups has its own exceptionally block, so we don't need one here.
+
+            // This future object has the following stages:
+            // - First it invokes the share group delete flow where the shard sharePartitionDeleteRequests
+            // method is invoked, and it returns request objects for each valid share group passed to it.
+            // - Then the requests are passed to the persister.deleteState method one at a time. The results
+            // are collated as a Map of groupId -> persister errors
+            // - The above map is then used to decide whether to invoke the group coordinator delete groups logic
+            // - Share groups with failed persister delete are NOT CONSIDERED for group coordinator delete.
+            // TLDR: DeleteShareGroups -> filter erroneous persister deletes -> general delete groups logic
             futures.add(future);
         });
 
@@ -843,6 +1052,152 @@ public class GroupCoordinatorService implements GroupCoordinator {
             // We don't use res.addAll(future.join()) because DeletableGroupResultCollection is an ImplicitLinkedHashMultiCollection,
             // which has requirements for adding elements (see ImplicitLinkedHashCollection.java#add).
             (accumulator, newResults) -> newResults.forEach(result -> accumulator.add(result.duplicate())));
+    }
+
+    private List<String> deleteCandidateGroupIds(
+        Map<String, Errors> groupErrMap,
+        List<String> groupList,
+        DeleteGroupsResponseData.DeletableGroupResultCollection collection
+    ) {
+        List<String> errGroupIds = new ArrayList<>();
+        groupErrMap.forEach((groupId, error) -> {
+            if (error.code() != Errors.NONE.code()) {
+                log.error("Error deleting share group {} due to error {}", groupId, error);
+                errGroupIds.add(groupId);
+                collection.add(
+                    new DeleteGroupsResponseData.DeletableGroupResult()
+                        .setGroupId(groupId)
+                        .setErrorCode(error.code())
+                );
+            }
+        });
+
+        Set<String> groupSet = new HashSet<>(groupList);
+        // Remove all share group ids which have errored out
+        // when deleting with persister.
+        groupSet.removeAll(errGroupIds);
+
+        // Let us invoke the standard procedure of any non-share
+        // groups or successfully deleted share groups remaining.
+        return groupSet.stream().toList();
+    }
+
+    private CompletableFuture<DeleteGroupsResponseData.DeletableGroupResultCollection> handleDeleteGroups(
+        RequestContext context,
+        TopicPartition topicPartition,
+        List<String> groupIds
+    ) {
+        return runtime.scheduleWriteOperation(
+            "delete-groups",
+            topicPartition,
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.deleteGroups(context, groupIds)
+        ).exceptionally(exception -> handleOperationException(
+            "delete-groups",
+            groupIds,
+            exception,
+            (error, __) -> DeleteGroupsRequest.getErrorResultCollection(groupIds, error),
+            log
+        ));
+    }
+
+    private CompletableFuture<Map<String, Errors>> deleteShareGroups(
+        TopicPartition topicPartition,
+        List<String> groupList
+    ) {
+        // topicPartition refers to internal topic __consumer_offsets
+        return runtime.scheduleWriteOperation(
+            "delete-share-groups",
+            topicPartition,
+            Duration.ofMillis(config.offsetCommitTimeoutMs()),
+            coordinator -> coordinator.sharePartitionDeleteRequests(groupList)
+        ).thenCompose(
+            this::performShareGroupsDeletion
+        ).exceptionally(exception -> handleOperationException(
+            "delete-share-groups",
+            groupList,
+            exception,
+            (error, __) -> {
+                Map<String, Errors> errors = new HashMap<>();
+                groupList.forEach(group -> errors.put(group, error));
+                return errors;
+            },
+            log
+        ));
+    }
+
+    private CompletableFuture<Map<String, Errors>> performShareGroupsDeletion(
+        Map<String, Map.Entry<DeleteShareGroupStateParameters, Errors>> deleteRequests
+    ) {
+        List<CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>>> futures = new ArrayList<>(deleteRequests.size());
+        Map<String, Errors> errorMap = new HashMap<>();
+        deleteRequests.forEach((groupId, valPair) -> {
+            if (valPair.getValue() == Errors.NONE) {
+                futures.add(deleteShareGroup(valPair.getKey()));
+            } else {
+                errorMap.put(groupId, valPair.getValue());
+            }
+        });
+
+        return persisterDeleteToGroupIdErrorMap(futures)
+            .thenApply(respErrMap -> {
+                errorMap.putAll(respErrMap);
+                return errorMap;
+            });
+    }
+
+    private CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>> deleteShareGroup(
+        DeleteShareGroupStateParameters deleteRequest
+    ) {
+        String groupId = deleteRequest.groupTopicPartitionData().groupId();
+        return persister.deleteState(deleteRequest)
+            .thenCompose(result -> CompletableFuture.completedFuture(Map.entry(groupId, result)))
+            .exceptionally(exception -> {
+                // In case the deleteState call fails,
+                // we should construct the appropriate response here
+                // so that the subsequent callbacks don't see runtime exceptions.
+                log.error("Unable to delete share group partition(s) - {} using request {}", groupId, deleteRequest, exception);
+                List<TopicData<PartitionErrorData>> respTopicData = deleteRequest.groupTopicPartitionData().topicsData().stream()
+                    .map(reqTopicData -> new TopicData<>(
+                        reqTopicData.topicId(),
+                        reqTopicData.partitions().stream()
+                            .map(reqPartData -> {
+                                Errors err = Errors.forException(exception);
+                                return PartitionFactory.newPartitionErrorData(reqPartData.partition(), err.code(), err.message());
+                            })
+                            .toList()
+                    ))
+                    .toList();
+
+                return Map.entry(groupId, new DeleteShareGroupStateResult.Builder()
+                    .setTopicsData(respTopicData)
+                    .build()
+                );
+            });
+    }
+
+    private CompletableFuture<Map<String, Errors>> persisterDeleteToGroupIdErrorMap(
+        List<CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>>> futures
+    ) {
+        return CompletableFuture.allOf(futures.toArray(new CompletableFuture<?>[]{})).thenCompose(v -> {
+            Map<String, Errors> groupIds = new HashMap<>();
+            for (CompletableFuture<Map.Entry<String, DeleteShareGroupStateResult>> future : futures) {
+                Map.Entry<String, DeleteShareGroupStateResult> entry = future.getNow(null);  // safe as within allOff
+                groupIds.putIfAbsent(entry.getKey(), Errors.NONE);
+                for (TopicData<PartitionErrorData> topicData : entry.getValue().topicsData()) {
+                    Optional<PartitionErrorData> errItem = topicData.partitions().stream()
+                        .filter(errData -> errData.errorCode() != Errors.NONE.code())
+                        .findAny();
+
+                    errItem.ifPresent(val -> {
+                        log.error("Received error while deleting share group {} - {}", entry.getKey(), val);
+                        groupIds.put(entry.getKey(), Errors.forCode(val.errorCode()));
+                    });
+                }
+            }
+
+            return CompletableFuture.completedFuture(groupIds);
+        });
     }
 
     /**
@@ -883,7 +1238,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 topicPartitionFor(request.groupId()),
                 Duration.ofMillis(config.offsetCommitTimeoutMs()),
                 coordinator -> new CoordinatorResult<>(
-                    Collections.emptyList(),
+                    List.of(),
                     coordinator.fetchOffsets(request, Long.MAX_VALUE)
                 )
             ).exceptionally(exception -> handleOffsetFetchException(
@@ -938,7 +1293,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                 topicPartitionFor(request.groupId()),
                 Duration.ofMillis(config.offsetCommitTimeoutMs()),
                 coordinator -> new CoordinatorResult<>(
-                    Collections.emptyList(),
+                    List.of(),
                     coordinator.fetchAllOffsets(request, Long.MAX_VALUE)
                 )
             ).exceptionally(exception -> handleOffsetFetchException(
@@ -956,47 +1311,61 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
-     * See {@link GroupCoordinator#describeShareGroupOffsets(RequestContext, DescribeShareGroupOffsetsRequestData)}.
+     * See {@link GroupCoordinator#describeShareGroupOffsets(RequestContext, DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup)}.
      */
     @Override
-    public CompletableFuture<DescribeShareGroupOffsetsResponseData> describeShareGroupOffsets(
+    public CompletableFuture<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup> describeShareGroupOffsets(
         RequestContext context,
-        DescribeShareGroupOffsetsRequestData requestData
+        DescribeShareGroupOffsetsRequestData.DescribeShareGroupOffsetsRequestGroup requestData
     ) {
         if (!isActive.get()) {
             return CompletableFuture.completedFuture(
-                new DescribeShareGroupOffsetsResponseData()
-                    .setResponses(DescribeShareGroupOffsetsRequest.getErrorDescribeShareGroupOffsets(
-                        requestData.topics(),
-                        Errors.COORDINATOR_NOT_AVAILABLE
-                    ))
-            );
+                DescribeShareGroupOffsetsRequest.getErrorDescribedGroup(requestData.groupId(), Errors.COORDINATOR_NOT_AVAILABLE));
         }
 
         if (metadataImage == null) {
             return CompletableFuture.completedFuture(
-                new DescribeShareGroupOffsetsResponseData()
-                    .setResponses(DescribeShareGroupOffsetsRequest.getErrorDescribeShareGroupOffsets(
-                        requestData.topics(),
-                        Errors.UNKNOWN_TOPIC_OR_PARTITION
-                    ))
-            );
+                DescribeShareGroupOffsetsRequest.getErrorDescribedGroup(requestData.groupId(), Errors.COORDINATOR_NOT_AVAILABLE));
         }
 
-        List<ReadShareGroupStateSummaryRequestData.ReadStateSummaryData> readStateSummaryData =
-            requestData.topics().stream().map(
-                topic -> new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
-                    .setTopicId(metadataImage.topics().topicNameToIdView().get(topic.topicName()))
+        Map<Uuid, String> requestTopicIdToNameMapping = new HashMap<>();
+        List<ReadShareGroupStateSummaryRequestData.ReadStateSummaryData> readStateSummaryData = new ArrayList<>(requestData.topics().size());
+        List<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic> describeShareGroupOffsetsResponseTopicList = new ArrayList<>(requestData.topics().size());
+        requestData.topics().forEach(topic -> {
+            Uuid topicId = metadataImage.topics().topicNameToIdView().get(topic.topicName());
+            if (topicId != null) {
+                requestTopicIdToNameMapping.put(topicId, topic.topicName());
+                readStateSummaryData.add(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                    .setTopicId(topicId)
                     .setPartitions(
                         topic.partitions().stream().map(
                             partitionIndex -> new ReadShareGroupStateSummaryRequestData.PartitionData().setPartition(partitionIndex)
                         ).toList()
-                    )
-            ).toList();
+                    ));
+            } else {
+                describeShareGroupOffsetsResponseTopicList.add(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic()
+                    .setTopicName(topic.topicName())
+                    .setPartitions(topic.partitions().stream().map(
+                        partition -> new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponsePartition()
+                            .setPartitionIndex(partition)
+                            .setErrorCode(Errors.UNKNOWN_TOPIC_OR_PARTITION.code())
+                            .setErrorMessage(Errors.UNKNOWN_TOPIC_OR_PARTITION.message())
+                    ).toList()));
+            }
+        });
+
+        // If the request for the persister is empty, just complete the operation right away.
+        if (readStateSummaryData.isEmpty()) {
+            return CompletableFuture.completedFuture(
+                new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup()
+                    .setGroupId(requestData.groupId())
+                    .setTopics(describeShareGroupOffsetsResponseTopicList));
+        }
+
         ReadShareGroupStateSummaryRequestData readSummaryRequestData = new ReadShareGroupStateSummaryRequestData()
             .setGroupId(requestData.groupId())
             .setTopics(readStateSummaryData);
-        CompletableFuture<DescribeShareGroupOffsetsResponseData> future = new CompletableFuture<>();
+        CompletableFuture<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup> future = new CompletableFuture<>();
         persister.readSummary(ReadShareGroupStateSummaryParameters.from(readSummaryRequestData))
             .whenComplete((result, error) -> {
                 if (error != null) {
@@ -1009,20 +1378,23 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     future.completeExceptionally(new IllegalStateException("Result is null for the read state summary"));
                     return;
                 }
-                List<DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic> describeShareGroupOffsetsResponseTopicList =
-                    result.topicsData().stream().map(
-                        topicData -> new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic()
-                            .setTopicId(topicData.topicId())
-                            .setTopicName(metadataImage.topics().topicIdToNameView().get(topicData.topicId()))
-                            .setPartitions(topicData.partitions().stream().map(
-                                partitionData -> new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponsePartition()
-                                    .setPartitionIndex(partitionData.partition())
-                                    .setStartOffset(partitionData.startOffset())
-                                    .setErrorMessage(partitionData.errorMessage())
-                                    .setErrorCode(partitionData.errorCode())
-                            ).toList())
-                    ).toList();
-                future.complete(new DescribeShareGroupOffsetsResponseData().setResponses(describeShareGroupOffsetsResponseTopicList));
+                result.topicsData().forEach(topicData ->
+                    describeShareGroupOffsetsResponseTopicList.add(new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseTopic()
+                        .setTopicId(topicData.topicId())
+                        .setTopicName(requestTopicIdToNameMapping.get(topicData.topicId()))
+                        .setPartitions(topicData.partitions().stream().map(
+                            partitionData -> new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponsePartition()
+                                .setPartitionIndex(partitionData.partition())
+                                .setStartOffset(partitionData.startOffset())
+                                .setErrorMessage(Errors.forCode(partitionData.errorCode()).message())
+                                .setErrorCode(partitionData.errorCode())
+                        ).toList())
+                    ));
+
+                future.complete(
+                    new DescribeShareGroupOffsetsResponseData.DescribeShareGroupOffsetsResponseGroup()
+                        .setGroupId(requestData.groupId())
+                        .setTopics(describeShareGroupOffsetsResponseTopicList));
             });
         return future;
     }
@@ -1175,19 +1547,6 @@ public class GroupCoordinatorService implements GroupCoordinator {
     }
 
     /**
-     * See {@link GroupCoordinator#onTransactionCompleted(long, Iterable, TransactionResult)}.
-     */
-    @Override
-    public CompletableFuture<Void> onTransactionCompleted(
-        long producerId,
-        Iterable<TopicPartition> partitions,
-        TransactionResult transactionResult
-    ) {
-        throwIfNotActive();
-        throw new IllegalStateException("onTransactionCompleted is not supported.");
-    }
-
-    /**
      * See {@link GroupCoordinator#onPartitionsDeleted(List, BufferSupplier)}.
      */
     @Override
@@ -1210,7 +1569,7 @@ public class GroupCoordinatorService implements GroupCoordinator {
                     );
                     return null;
                 }
-            ).toArray(new CompletableFuture[0])
+            ).toArray(new CompletableFuture<?>[0])
         ).get();
     }
 
