@@ -50,12 +50,11 @@ import org.mockito.Mockito;
 
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.OptionalLong;
@@ -85,8 +84,8 @@ public class KafkaRaftClientReconfigTest {
             .withUnknownLeader(0)
             .build();
 
-        List<List<ControlRecord>> expectedBootstrapRecords = Arrays.asList(
-            Arrays.asList(
+        List<List<ControlRecord>> expectedBootstrapRecords = List.of(
+            List.of(
                 new ControlRecord(
                     ControlRecordType.SNAPSHOT_HEADER,
                     new SnapshotHeaderRecord()
@@ -104,7 +103,7 @@ public class KafkaRaftClientReconfigTest {
                     voters.toVotersRecord(ControlRecordUtils.KRAFT_VOTERS_CURRENT_VERSION)
                 )
             ),
-            Arrays.asList(
+            List.of(
                 new ControlRecord(
                     ControlRecordType.SNAPSHOT_FOOTER,
                     new SnapshotFooterRecord()
@@ -129,15 +128,15 @@ public class KafkaRaftClientReconfigTest {
         context.unattachedToLeader();
 
         // check if leader writes 3 bootstrap records to the log
-        Records records = context.log.read(0, Isolation.UNCOMMITTED).records;
+        Records records = context.log.read(0, Isolation.UNCOMMITTED).records();
         RecordBatch batch = records.batches().iterator().next();
         assertTrue(batch.isControlBatch());
         Iterator<Record> recordIterator = batch.iterator();
         Record record = recordIterator.next();
         RaftClientTestContext.verifyLeaderChangeMessage(
             local.id(),
-            Arrays.asList(local.id(), follower.id()),
-            Arrays.asList(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
             record.key(),
             record.value()
         );
@@ -189,36 +188,18 @@ public class KafkaRaftClientReconfigTest {
             .withUnknownLeader(0)
             .build();
 
-        List<List<ControlRecord>> expectedBootstrapRecords = Arrays.asList(
-            Arrays.asList(
-                new ControlRecord(
-                    ControlRecordType.SNAPSHOT_HEADER,
-                    new SnapshotHeaderRecord()
-                        .setVersion((short) 0)
-                        .setLastContainedLogTimestamp(0)
-                )
-            ),
-            Arrays.asList(
-                new ControlRecord(
-                    ControlRecordType.SNAPSHOT_FOOTER,
-                    new SnapshotFooterRecord()
-                        .setVersion((short) 0)
-                )
-            )
-        );
-
         // check leader does not write bootstrap records to log
         context.unattachedToLeader();
 
-        Records records = context.log.read(0, Isolation.UNCOMMITTED).records;
+        Records records = context.log.read(0, Isolation.UNCOMMITTED).records();
         RecordBatch batch = records.batches().iterator().next();
         assertTrue(batch.isControlBatch());
         Iterator<Record> recordIterator = batch.iterator();
         Record record = recordIterator.next();
         RaftClientTestContext.verifyLeaderChangeMessage(
             local.id(),
-            Arrays.asList(local.id(), follower.id()),
-            Arrays.asList(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
+            List.of(local.id(), follower.id()),
             record.key(),
             record.value()
         );
@@ -349,7 +330,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Show that the new voter is not currently a voter
@@ -430,7 +411,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // empty cluster id is rejected
@@ -465,7 +446,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Attempt to add new voter to the quorum
@@ -495,7 +476,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(ListenerName.normalised("not_the_default_listener"), newAddress)
+            Map.of(ListenerName.normalised("not_the_default_listener"), newAddress)
         );
 
         // Attempt to add new voter to the quorum
@@ -526,7 +507,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -553,7 +534,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + anotherNewVoter.id()
         );
         Endpoints anotherNewListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), anotherNewAddress)
+            Map.of(context.channel.listenerName(), anotherNewAddress)
         );
         context.deliverRequest(context.addVoterRequest(Integer.MAX_VALUE, anotherNewVoter, anotherNewListeners));
         context.pollUntilResponse();
@@ -582,7 +563,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Catch up the new voter to the leader's LEO
@@ -620,7 +601,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -665,7 +646,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -710,7 +691,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -782,7 +763,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -842,7 +823,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -902,7 +883,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -957,7 +938,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -1010,7 +991,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -1140,7 +1121,7 @@ public class KafkaRaftClientReconfigTest {
         context.pollUntilRequest();
         context.collectEndQuorumRequests(
             epoch,
-            new HashSet<>(Arrays.asList(follower1.id(), follower2.id())),
+            new HashSet<>(List.of(follower1.id(), follower2.id())),
             Optional.empty()
         );
 
@@ -1503,7 +1484,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
         context.deliverRequest(context.addVoterRequest(Integer.MAX_VALUE, newVoter, newListeners));
         context.pollUntilResponse();
@@ -1532,7 +1513,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -2029,7 +2010,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newVoterListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newVoterAddress)
+            Map.of(context.channel.listenerName(), newVoterAddress)
         );
 
         // Establish a HWM and fence previous leaders
@@ -2281,7 +2262,7 @@ public class KafkaRaftClientReconfigTest {
             .withKip853Rpc(true)
             .withBootstrapSnapshot(Optional.empty())
             .withUnknownLeader(epoch)
-            .withBootstrapServers(Optional.of(Collections.singletonList(bootstrapAddress)))
+            .withBootstrapServers(Optional.of(List.of(bootstrapAddress)))
             .build();
 
         context.pollUntilRequest();
@@ -2353,7 +2334,7 @@ public class KafkaRaftClientReconfigTest {
             9990 + newVoter.id()
         );
         Endpoints newListeners = Endpoints.fromInetSocketAddresses(
-            Collections.singletonMap(context.channel.listenerName(), newAddress)
+            Map.of(context.channel.listenerName(), newAddress)
         );
 
         // Establish a HWM and fence previous leaders
